[tool.poetry]
name = "analises-com-python"
version = "0.1.0"
description = ""
authors = ["DiegoFreitasDS <diegop.freitas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.1.2"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
